--- a/personalsite.css
+++ b/personalsite.css
@@ -1,20 +1,120 @@
 /* CSS code */
+/* styling the nav bar */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #786e75;
+  padding: 10px;
+}
+
+.navbar-links {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.navbar-links li {
+  list-style-type: none;
+  margin:0;
+  padding:0;
+  display: flex;
+  margin-right: 15px;
+  align-items: center;
+  height: 100%
+}
+
+.navbar-links a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+}
+.nav-content{
+  padding: 20px;
+  color: #ffffff
+}
+
+.nav-image-container {
+  margin-left: 15px;
+}
+
+.nav-image {
+  max-width: 80px;
+  height: 100px;
+  float:right;
+}
+
+/* home page styling */
+.home-container {
+  display: flex;
+}
+.home-heading {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: x-large;
+  text-align:center;
+  color:#423c40
+ 
+ }
+
+.home-quote-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #412538; 
+  padding: 20px;
+}
+
+.home-quote {
+  font-style: italic;
+  color: #786e75;
+  text-align: center;
+  font-size: x-large; 
+}
+
+.home-photo-container {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end; 
+  align-items: center; 
+  padding: 20px;
+}
+
+.home-photo {
+  max-width: 45vw; 
+  max-height: 60vh;
+  width: auto;
+  height: auto; 
+  border: 5px solid #412538; 
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px; /* Space between boxes */
+}
+
+.box {
+  background-color: #412538;
+  border-radius: 10px;
+  padding: 20px;
+}
+
 body {
   background-color: #786e75; /* background color for all pages */
   display:grid;
   grid-template-rows: auto
   padding top 100vh;
   padding-bottom: 100vh;
-
   }
 
   .section {
-    margin: 5em 15em 0
-    /*margin-bottom: 20px;*/
+    margin: 5em 15em 0  
   }
 
   .heading {
-   /* background-color: #f0f0f0; */
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: x-large;
    text-align:center;
@@ -23,87 +123,76 @@ body {
   }
 
   /* how to make cards for info*/
-.cards {
-    display: grid;
-    /* padding: 40px;
-    border-radius: 40px ;
-    margin: 20px 0 50px;
-    background-color: #412538;
-    justify-content: center;
-    grid-template-rows: 1fr; */
-    grid-template-columns:repeat (3, 45%);
-    gap: 20px;
-    padding: 20px;
-    }
-  
-.card{
+  .box {
   background-color: #412538;
-  color: white;
-  padding: 20px;
   border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
+  padding: 20px;
+} 
 
-.cards-heading {
   
+.container{
+  display:flex
+  flex-direction:column;
+  gap: 20px;
 }
+  
+ .cardDisplay {
+  display:flex;
+  align-items: center;
+ }
+
+ .image-container{
+  margin-right: 20px;
+ }
+ 
+ .card-img{
+  width: 200px;
+  height: 200px;
+  float: left;
+  border-radius: 20px;
+  margin-right: 20px;
+ }
+
 .cards-p{
-  font-size: 24;
+  width: 90%;
+  margin 20px 30 px 0 0;
+  font-size: 36;
+  color: #786e75
 }
-.m1h2 {
+.card-header {
   color:#786e75;
   text-align: center;
   font-size: 2em;  
 }
-.m1 img {
-  width: 200px;
-  height: 200px;
-  float: left;
-  
-}
-.m1p1{
-  float: left;
-  color:#786e75;
-  
-  
 
-}
+  /* styling for footer */
+  .footer {
+    background-color: #333333;
+    color: #ffffff;
+    padding: 20px;
+    text-align:center;
+   }
+  
+  .social-links {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
 
-.cards-photo{
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-}
-/* .m1{
-  display: flex;
-  align-items: center;
-  padding: 30px 15% 0;
-} */
-
-  .section2 {
-    background-color: #f0f0f0; 
-    color: #210a0a; 
-    grid-template-columns:auto;
+  }
+  
+  .social-links li {
+    margin-right: 15px;
+  }
+  
+  .social-links a {
+    color: #ffffff;
+    text-decoration: none;
+  }
+  .social-links img {
+    max-width: 30px; 
+    height: auto;
   }
 
-  .section3 {
-    background-color: #f0f0f0; 
-    color: #210a0a; 
-  }
-
-
-/* .home-content img {
-    width: 200px;
-    height: 150px;
-    float: left;
-    margin-right: 23px;
-    position: relative;
-  }
-  .section img {
-    width:200px;
-    height: 150px;
-    float: left;
-    margin-right: 23px;
-    margin-right: 25px;
-    position: relative;
-  } */
+  
